Make a first pass at refining large image placements in PDF

--- a/content/1-history/3.md
+++ b/content/1-history/3.md
@@ -65,11 +65,11 @@ The alternative “low-pressure table” equipment to be used, the “lamination
 
 {% figure 'fig-3-1' %}
 
-{% figure 'table-3-1' %}
+{% figure 'table-3-1' 'pdf-float-top pdf-page-break-after' %}
 
 In the thesis, both Mehra and Hacke are referred to, but only the Hacke-inspired (unpublished) statement is listed as an appendix to the thesis. In [table 3.1](#table-3-1), the Mehra and the Hacke statements are shown side by side with their original numbering. They appear mostly to agree, although some statements appear in different order and some do not appear in both lists. The main difference is probably regarding the use of heat or raised humidity or liquid water in the treatments, along with a difference of opinion as to the consequences. In the main thesis text, I summed up my opinion regarding each of the statements, listing which option I chose to follow in a condition list ([table 3.2](#table-3-2)). My condition list was introduced with acknowledgments of the ideal nature of the list and the fact that it would probably not be possible to fulfill all of the options. Likewise, I expected that as the treatment progressed the selection of treatment methods and materials most likely would involve compromises compared with the ideal situation.
 
-{% figure 'table-3-2' %}
+{% figure 'table-3-2' 'pdf-float-top' %}
 
 A closer look at the treatment options for the thesis work reveals that item 1 (reversibility) was qualified as “optimal” rather than “full” as Mehra has it. At the student seminar, the unrealistic option of full reversibility was discussed, while attempting optimal reversibility was accepted to include a possible failure situation.
 
