--- a/content/1-history/4.md
+++ b/content/1-history/4.md
@@ -157,7 +157,7 @@ The authors would like to thank the following persons and institutions. The Gett
 
 [Table 4.1](#table-4-1) lists the seventeen paintings from the CIA and RMG collections that were examined by an expert panel for this study.
 
-{% figure 'table-4-1' %}
+{% figure 'table-4-1' 'pdf-float-top' %}
 
 {% backmatter %}
 
