--- a/content/2-present-practice/11.md
+++ b/content/2-present-practice/11.md
@@ -73,13 +73,13 @@ After the complete evaporation of solvents, always keeping the painting tensione
 
 {% figure 'fig-11-4' 'pdf-two-column' %}
 
-{% figure 'fig-11-5' %}
+{% figure 'fig-11-5' 'pdf-no-top-border' %}
 
 It’s important to note that this method is not an alternative to the use of a hot table, but it permits heat transfer from the back when it is necessary to work with the painting facedown.[^15] Using a vacuum system and applying heat through a tub containing preheated water guarantees that the whole surface is treated with the same pressure and temperature, substantially reducing the risk of nonhomogeneous performance of the thermoplastic adhesive.
 
 In preparation for mending structural damages, some adhesives were tested ([table 11.1](#table-11-1)). To avoid damage to the original canvas in the future, the breaking point of the adhesive should be equal to or slightly less than the toughness value of the original yarn ({% cite 'Orata 2009' %}), measured by tension test with a dynamometer. The adhesive with a breaking point that is similar to that of the original yarn is highlighted in red in the table.
 
-{% figure 'table-11-1' %}
+{% figure 'table-11-1' 'pdf-float-top' %}
 
 All the cuts, tears, and holes (more than two hundred) were mended thread by thread using Akeogard AT35[^16] applied with a tiny brush, using an optical visor. All the structural damages and the four seams were further reinforced by applying monofilament fabric patches adhered with a mixture made of 80% Plextol B500 and 20% Dispersion K360, reactivated by butyl acetate.
 
@@ -89,7 +89,7 @@ Glue-paste lining did not seem suitable, not only because it would increase the 
 
 A study focused on testing different adhesives obtained by mixing Plextol B500 and Dispersion K360,[^18] in different proportions, was carried out to obtain a final mixture to be reactivated by heating. Empirical tests were performed to define the approximate reactivation temperature and the reversibility of each mixture ({% cite 'Orata and Capellaro 2013' %}, 57–66) in order to identify the one that would better fit the features and conservative conditions of the painting ([table 11.2](#table-11-2)). The possibility of matching specific needs makes this acrylic-based class of adhesives very advantageous in devising innovative solutions.
 
-{% figure 'table-11-2' %}
+{% figure 'table-11-2' 'pdf-float-top' %}
 
 Samples 1 and 2 are tests on the two pure resins (see [table 11.2](#table-11-2)). Each mixture was sprayed on a polyester canvas mock-up. After solvent evaporation, each was joined to a linen canvas mock-up in order to simulate the real conditions of use. The mock-ups were then placed in a vacuum bag and lined by increasing the temperature incrementally starting at 40°C and going up to 80°C, applying a constant vacuum of 700 mbar. After each 10-degree increase, the bag was opened, each mock-up was tested, and the degree of adhesion was evaluated. Sample 4, composed of 30% Dispersion K360 and 70% Plextol B500, reactivated between 60°C and 70°C (shown in red in [table 11.2](#table-11-2)), showed a good combination of adhesion and reversibility.
 
@@ -99,10 +99,7 @@ Before lining the painting facedown in the vacuum system, it was necessary to fi
 
 The adhesion of new canvas was carried out in a vacuum bag (envelope), with the painting placed facedown on a worktop. Nonwoven fabric[^21] was used as a cushioning layer to preserve the thin brushstrokes, keeping the seams on the back at the same time. The adhesive was reactivated by placing 70°C water inside a loom and treating circumscribed areas of about 1 square meter using the tub system described above and outlined in [figure 11.4](#fig-11-4). To stretch the canvas on the final expandable stretcher, the painting was positioned facedown to reduce the forces applied at the edges.
 
-
 Not all the losses were filled and retouched because the art historian who directed the conservation treatment chose to leave a historical memory of the flood of Florence. When the treatment was finished, the painting was exhibited at the Medici Chapels in Florence ([fig. 11.5](#fig-11-5)).
-
-{% figure 'fig-11-5' %}
 
 ## Conclusion
 
