--- a/content/5-adhesives/28.md
+++ b/content/5-adhesives/28.md
@@ -77,17 +77,17 @@ The application of adhesive meshes aims at reinforcing degraded canvas with an a
 
 For strip-lining, the bonding interfaces are readily accessible. This intervention was realized on a medium-format double-sided canvas painting ([fig. 28.3](#fig-28-3)).[^9] A sandwich system of two nonwoven polyester strips was chosen.[^10] Methyl cellulose meshes made from Benecel A4C[^11] were used, since high bond strength and adhesive stability in variable environmental conditions were required and the canvas was not sensitive to water. To prepare the bonding material, methyl cellulose meshes made with laser-cut silicone molds were partly activated by slightly moistening the nonwoven polyester before placing the adhesive meshes on the nonwoven strips and drying them under pressure ([fig. 28.4](#fig-28-4)). Activation was then initiated by spraying water with a precision pump sprayer ([fig. 28.5](#fig-28-5)). The meshes were left for ten minutes as methyl cellulose takes up water slowly.[^12] Coverage with a Melinex film without direct contact prevented the meshes from drying (see [fig. 28.5](#fig-28-5)).
 
-{% figure 'fig-28-3' 'pdf-two-column' %}
+{% figure 'fig-28-3' 'pdf-two-column pdf-float-top' %}
 
-{% figure 'fig-28-4' %}
+{% figure 'fig-28-4' 'pdf-no-top-border pdf-float-top' %}
 
-{% figure 'fig-28-5' 'pdf-two-column' %}
+{% figure 'fig-28-5' 'pdf-two-column pdf-float-top' %}
 
 The activation process was repeated twice to apply a total amount of about 3 ml water per 100 square centimeters of mesh, resulting in a relatively high water input that was almost completely absorbed by the mesh. To achieve the bonding, the activated strips were then placed below and on top of the tacking margin of the painting’s canvas (see [fig. 28.3](#fig-28-3)) and left to dry for twenty-four hours under pressure (20 g/cm²) with blotting paper interleaves. After complete drying, it was possible to pull the tacking margin taut enough to remount the painting on a new stretcher, proving that methyl cellulose meshes are capable of generating a sufficiently strong bond between two textiles.
 
 A different activation approach is necessary when access to the bonding surface is limited. This phenomenon often occurs with lined paintings, such as that shown in [figure 28.6](#fig-28-6), where the edge of the original canvas is detached locally from the lining canvas. To maintain the historical lining and stabilize loosened areas, insertion of the adhesive was possible only through small gaps, which is why adhesive meshes provided a suitable approach. Activation has to be carried out quickly to avoid excess water in the painting structure. Therefore, Methocel A15LV meshes and sturgeon-glue meshes are suitable due to the short time required and the reduced need for water for activation.
 
-{% figure 'fig-28-6' %}
+{% figure 'fig-28-6' 'pdf-no-top-border' %}
 
 The application is identical for both adhesives. To uniformly activate the inserted dry mesh, a nonwoven capillary fabric[^13] is used. This material can transport water along its directed fibers and then disperse it onto the mesh. A protrusion of some millimeters allows access for the water to be applied. The adhesive mesh and the capillary fabric are first cut to match the shape of the detachment. Then both the mesh and the capillary fabric are inserted between the canvas layers ([fig. 28.7](#fig-28-7)). An additional layer of Melinex on top is advisable to protect the original canvas from being wetted, and a light weight is used to keep the layers in contact during the procedure.
 
