--- a/content/6-interventions/32.md
+++ b/content/6-interventions/32.md
@@ -93,9 +93,9 @@ The different measures considered in detail ([figs. 32.4](#fig-32-4), [32.5](#fi
 
 -   1,181 of the paintings are thought to be unlined. Documentary analysis and experience show that measures may still have been carried out on the canvases. Even before thread-by-thread tear mending established itself in the 1980s, tears were often only mended locally, for example by attaching patches of tow or fabric to the back. Tacking-edge repairs can range from local tear stabilization to restretching a painting after complete strip-lining—without necessarily having been documented.
 
-{% figure 'fig-32-4' 'pdf-two-column' %}
+{% figure 'fig-32-4' 'pdf-two-column pdf-float-top' %}
 
-{% figure 'fig-32-5' 'pdf-two-column' %}
+{% figure 'fig-32-5' 'pdf-two-column pdf-float-top pdf-no-top-border' %}
 
 According to a subjective impression of the entire collection, the above result—that approximately 70% of the 1,740 documented paintings have not yet been lined, marouflaged, or impregnated—appears to be on the low side. The reason is that the 735 canvas paintings (30% of the total number) without documentation are predominantly pictures that have been kept in storage for decades and not exhibited. On the whole, if there were no plans to show the paintings, they were not restored.
 
