--- a/content/6-interventions/35.md
+++ b/content/6-interventions/35.md
@@ -36,7 +36,7 @@ This paper first presents a synthesis of the multidisciplinary study carried out
 
 The behavior of paintings during and after immersion is linked to the physical and chemical properties of their constitutive materials and the painting technique, as well as the past intervention history of the artworks and their prior state of conservation. A canvas naturally oxidizes and becomes brittle over time, and storage conditions also affect aging, especially when artworks are stored under poor conditions. Examination of the fifty-one paintings showed that forty had already undergone conservation treatments prior to the flood, including major structural intervention on thirty-one of them, sometimes at the C2RMF. Two had been transferred; twenty-five had been lined with glue paste, one with wax resin, and two with synthetic adhesives; and one had been mounted on cardboard. In addition, many of the paintings that had not been entirely relined had reinforcing patches added to their back, and one of them had been strip-lined. Most of the paintings from the sixteenth and seventeenth centuries had been either transferred or lined using the traditional method with glue paste, while some from the eighteenth century had been lined with polyvinyl acetate (PVA) materials. Artworks from nineteenth century had undergone fewer structural conservation interventions but were more often treated with a large number of patches on the back of the paintings. [Table 35.1](#table-35-1) summarizes the past structural interventions of the paintings.
 
-{% figure 'table-35-1' %}
+{% figure 'table-35-1' 'pdf-float-top' %}
 
 Canvas is a hygroscopic material that swells in the presence of water and shrinks upon drying if it is not properly stretched on a frame ({% cite 'A. Roche 2003' %}). Consequently, paintings that had too weak a frame or were not sufficiently stretched suffered particularly during the flood. In addition, twenty-eight out of thirty-one past linings peeled off partially or completely; only three linings of small-format paintings retained their mechanical properties. To limit the shrinkage of the canvases at the time of the rescue, conservators removed eighteen paintings from their stretchers and placed them on wooden boards. They also stapled a certain number of canvases to their stretchers. Nevertheless, many canvases were distorted during drying and some shrank at their edges or at tears. Indeed, tears were observed on thirty-five of the fifty-one paintings. Twenty paintings had old tears that had been treated in the past, and fifteen had new, more complex tears corresponding to traumas suffered during the flooding ([fig. 35.1](#fig-35-1)).
 
@@ -64,7 +64,7 @@ Moisture was also essential to relax the canvas and to allow the paint layer to 
 
 Another type of intervention was carried out to restore the cohesion of the different layers and the adhesion between the paint layers and the support. Most of the paintings were impregnated from the reverse of the canvas with different adhesives: Aquazol, hide glue, sturgeon glue, and acrylic resins: Beva 371, Plexisol P550, and Paraloid B72. A total of forty-one paintings were thus consolidated ([table 35.2](#table-35-2)). Most of the paintings with a red clay–based preparation layer were consolidated with protein adhesives (animal glues) used in colloidal solutions. Because the clay-based preparations have a significant absorption capacity, this consolidation restores the cohesion within the preparation layer and the adhesion between the different layers. In contrast, white preparations form a more cohesive and rigid layer, so the addition of an aqueous adhesive is likely to accentuate the stresses between the preparation layer and the canvas—which, on more recent paintings, is often more reactive to water. For that reason, synthetic adhesives were used on most artworks with a white preparation layer.
 
-{% figure 'table-35-2' %}
+{% figure 'table-35-2' 'pdf-float-top' %}
 
 To increase the mechanical properties of the original fabric and to stabilize it, thirty-six of the fifty-one paintings were relined. Of the thirty-one paintings that had been lined in the past, all but three had to be relined following the disaster. As mentioned, those paintings whose lining was kept are small format. One was previously lined with glue paste and the other two with vinyl glue, according to previous treatment documentation.
 
@@ -74,7 +74,7 @@ Mixed treatments consist of applying a gauze with glue paste to the back of the 
 
 While in the past the majority of paintings were lined with glue paste (twenty-five out of thirty-one), the relining methods were diversified in the 2016–17 restorations. Out of thirty-six relined paintings, only sixteen were treated with traditional lining adhesives (glue paste), six with mixed adhesives, and fourteen with synthetic adhesives. [Table 35.3](#table-35-3) summarizes the types of structural interventions carried out in 2016–17 and compares them to past interventions.
 
-{% figure 'table-35-3' 'is-table-scale-6' %}
+{% figure 'table-35-3' 'is-table-scale-6 pdf-float-top' %}
 
 ## Case Study: *The Sacrifice of Abraham*
 
