--- a/content/7-modern-contemporary/40.md
+++ b/content/7-modern-contemporary/40.md
@@ -135,7 +135,7 @@ A year after the first stage of the project ended, three paintings that containe
 
 Results for each treatment are summarized in [table 40.1](#table-40-1) and presented visually in [figures 40.6](#fig-40-6) and [40.7](#fig-40-7). Cupping heights over time for all treatments are plotted in [figure 40.8](#fig-40-8). Here, only the highlights are noted, with further detail provided in the Discussion section.
 
-{% figure 'table-40-1' 'is-table-scale-6' %}
+{% figure 'table-40-1' 'is-table-scale-6 pdf-float-top' %}
 
 {% figure 'fig-40-6' %}
 
