--- a/content/8-posters/48.md
+++ b/content/8-posters/48.md
@@ -66,7 +66,7 @@ In Russia, a large number of paintings that have previously been treated with be
 
 The canvas of the painting had a large tear that had been fixed with beeswax, and losses of ground and paint layer had been filled with beeswax and then overpainted in oil ([figs. 48.1](#fig-48-1), [48.2](#fig-48-2)). Over time, the wax had lost its adhesive strength, which resulted in the detachment of the tear edges and the formation of the strains in the canvas near the tear. The original paint layer was covered with surface dirt, overpaint, wax drops, and uneven and darkened varnish. The painting was stretched on a stretcher of a smaller size than the original, with the paint layer wrapped over the sides.
 
-{% figure 'fig-48-1' %}
+{% figure 'fig-48-1' 'pdf-85-percent-width' %}
 
 {% figure 'fig-48-2' %}
 
@@ -78,7 +78,7 @@ Removal of beeswax from the canvas was done using the first method described in 
 
 This procedure allowed 5% sturgeon glue to be used to consolidate the paint layer and ground. The tear was then mended thread-by-thread with a 5% solution of polyvinyl butyral (PVB) in isopropanol (with a high degree of purity) ([fig. 48.4](#fig-48-4)). On the reverse, the tear area was reinforced with additional threads taken from canvas edges to make the tear area more secure during stretching on a new stretcher.
 
-{% figuregroup '2' 'fig-48-4-a, fig-48-4-b' '**Figure 48.4** The tear area after removal of beeswax and overpaint followed by thread-by-thread mending with a 5% solution of polyvinyl butyral. (a) Front of painting. (b) Reverse of painting, showing threads from canvas edges were added for reinforcement. Images: Department of Scientific Conservation of Oil Paintings, State Research Institute for Restoration (GOSNIIR) / Photo: Anton Mikhailov' 'pdf-two-column' %}
+{% figuregroup '2' 'fig-48-4-a, fig-48-4-b' '**Figure 48.4** The tear area after removal of beeswax and overpaint followed by thread-by-thread mending with a 5% solution of polyvinyl butyral. (a) Front of painting. (b) Reverse of painting, showing threads from canvas edges were added for reinforcement. Images: Department of Scientific Conservation of Oil Paintings, State Research Institute for Restoration (GOSNIIR) / Photo: Anton Mikhailov' 'pdf-two-column pdf-float-top' %}
 
 After the elimination of canvas deformations, losses to the ground were filled. Surface cleaning was done using a solution of one part of purified ox bile and four parts distilled water. After applying the mixture, the treated area was rinsed with distilled water. A mixture of ethanol and pinene (1:2) was used to thin the darkened varnish.
 
