--- a/content/8-posters/54.md
+++ b/content/8-posters/54.md
@@ -50,7 +50,7 @@ Plastic recovery of planar distortions in paint, ground, and canvas is the resul
 
 The work was exposed to cycles, each consisting of a humidification followed, without delay, by gentle warming and flattening on the vacuum hot table ([table 54.1](#table-54-1)). After each cycle, the tension of the working stretcher was adjusted by slightly expanding the turnbuckle joints at the corners. This provided a gentle, consistent tension during the treatment, with a slight increase in tension between cycles.
 
-{% figure 'table-54-1' %}
+{% figure 'table-54-1' 'pdf-float-top' %}
 
 In total, thirteen cycles of relaxation treatment were executed. Significant structural changes were observed from cycles 1 to 5. After cycle 7, diminishing results were noted, despite other approaches being adopted (see [table 54.1](#table-54-1)). At the thirteenth round of flattening, the gains obtained appeared to have plateaued, and the relaxation-flattening phase was brought to completion (figs. [54.2](#fig-54-2), [54.3](#fig-54-3)). It is hoped that lasting results were achieved with this gradual approach to relaxation using moisture, heat, pressure, and tension. These factors allow for movement in the paint and canvas layers without increased stress and the potential for further damage to occur during treatment.
 
