--- a/content/8-posters/62.md
+++ b/content/8-posters/62.md
@@ -66,7 +66,7 @@ Cross sections were prepared, and four priming layer stratigraphies were identif
 
 The top surface of priming layers was characterized using ATR-FTIR ([table 62.1](#table-62-1), [fig. 62.1](#fig-62-1)) ({% cite 'Osmond et al. 2018' %}). At this surface layer, forty-nine of the fifty-three canvas samples contained synthetic polymer binders and four samples contained oil priming. Styrenated-acrylic predominated as a binder, followed by acrylic and acrylic–polyvinyl acetate (PVAc) binders. No alkyd binders were found.
 
-{% figure 'table-62-1' %}
+{% figure 'table-62-1' 'pdf-float-top' %}
 
 {% figure 'fig-62-1' %}
 
@@ -82,7 +82,7 @@ Variations were observed between ATR-FTIR and Py-GCMS data, including a signific
 
 In total, thirty-four different copolymer binder combinations in the upper layer were found in the surface layer of the forty-nine synthetic-primed samples—indicating a wide variety of formulations and subsequent properties. The history of synthetic emulsion binders and copolymer properties is well documented, including in conservation literature ({% cite 'Scalarone and Chiantore 2004' %}; {% cite 'Learner 2004' %}; {% cite 'Croll 2007' %}; {% cite 'Standeven 2011' %}), which describes how copolymers are formulated to provide optimal coating properties. For example, adding monomers that have a higher glass transition temperature (Tg), such as styrene (or MMA), to a “soft” acrylic monomer such as n-butyl acrylate results in a stiffer and possibly more heat-tolerant priming, depending on the monomer ratio ([table 62.2](#table-62-2)).
 
-{% figure 'table-62-2' %}
+{% figure 'table-62-2' 'pdf-float-top' %}
 
 ## Pigments and Fillers
 
