--- a/content/3-open-questions/16.md
+++ b/content/3-open-questions/16.md
@@ -56,7 +56,7 @@ The existing protocol for the zero-span tensile strength determination of paper 
 
 In order to apply this technology to yarn samples and use it as a standard method for the study of paintings, it was modified for this project. The basis for the study is provided by the standards listed in [table 16.1](#table-16-1), from which relevant aspects were adopted. The following criteria were developed:
 
-{% figure 'table-16-1' %}
+{% figure 'table-16-1' 'pdf-float-top' %}
 
 -   Theoretically, three different types of samples were conceivable: twisted yarns, untwisted yarns, and single fibers. However, in the case of twisted yarn, premature damage of the sample can be excluded. In addition, for this configuration, a maximal correlation of the results with the strength of the canvas is expected.
 
@@ -78,7 +78,7 @@ In order to apply this technology to yarn samples and use it as a standard metho
 
 To develop the standard protocol, test measurements were conducted on a new fabric using the above criteria. The use of an identical fabric ensured the comparability of the different settings of the testing machine. The resulting standard protocol is outlined in [table 16.2](#table-16-2), which shows the final parameters that allowed us to fulfill our criteria.
 
-{% figure 'table-16-2' %}
+{% figure 'table-16-2' 'pdf-float-top' %}
 
 For conducting a measurement for one canvas, the following steps were performed:
 
@@ -108,7 +108,7 @@ From the new and artificially aged fabrics, samples of warp and weft were taken 
 
 The results of the tensile strength measurements confirm that the standard protocol we developed is applicable without any limitation to all yarn samples tested. [Figure 16.3a](#fig-16-3) shows the average of the diameter-normalized maximum tensile strength (  *f<sub>H</sub>* in N/tex) with the corresponding standard deviation for all measured samples. All results for the tensile strength lie between 0.000120 and 0.02744 N/tex. The new fabric before and after artificial aging shows the highest values, thus these samples cover the range of weak aging. The samples from the original canvases are found in the range of middle and show strong aging, making it apparent that the artificial aging was not sufficient to reflect the values of the original samples. For the artificially aged fabrics, the warps were generally more stable than the wefts—either those that were unaged or those that had been aged for shorter periods.
 
-{% figuregroup '2' 'fig-16-3-a, fig-16-3-b' '**Figure 16.3** (a) Diameter-normalized maximum tensile strengths (*ƒ<sub>H</sub>*) of the measured samples, average of ten measurements. (b) Limiting viscosity numbers (GVZ) of the measured samples. Experiment temperatures: 18°C (light gray) and 19°C (dark gray). N0: new, N1: artificial aging, N2: longer artificial aging, H: original, K: warp, S: weft. Images: Theresa A. Bräunig' 'pdf-two-column' %}
+{% figuregroup '2' 'fig-16-3-a, fig-16-3-b' '**Figure 16.3** (a) Diameter-normalized maximum tensile strengths (*ƒ<sub>H</sub>*) of the measured samples, average of ten measurements. (b) Limiting viscosity numbers (GVZ) of the measured samples. Experiment temperatures: 18°C (light gray) and 19°C (dark gray). N0: new, N1: artificial aging, N2: longer artificial aging, H: original, K: warp, S: weft. Images: Theresa A. Bräunig' 'pdf-two-column pdf-float-top' %}
 
 For the historical yarn samples from the nineteenth and twentieth centuries (H1U20–H10K19), the strength decreases with increasing age. In the region with the lowest strength, measured on the samples from the sixteenth to eighteenth century, the strength does not correlate with the age. Probably, the strength of these samples is more strongly influenced by further factors, such as aging conditions, pretreatment, and painting technique.
 
