--- a/content/3-open-questions/19.md
+++ b/content/3-open-questions/19.md
@@ -47,7 +47,7 @@ In 1982, Mecklenburg’s unpublished report “Some Aspects of the Mechanical Be
 
 Mecklenburg introduced three concepts: First, that the total tension in a painting (the double red arrow running across the painting in [fig. 19.1](#fig-19-1)) was simply the sum of the individual tensions in each layer (the smaller arrows on the far right in [fig. 19.1](#fig-19-1)). Second, that the response of each layer to changes in RH was not simply a change in dimension but also a change in stiffness. And third, that “force realignment” (later phrased as stress alignment) could explain many deformations of paintings while under tension, as in [figure 19.1a](#fig-19-1). (Curl, a separate mechanism for cupping, is described by [Hough and Michalski](/7-modern-contemporary/40/) in these proceedings.)
 
-{% figure 'fig-19-1' %}
+{% figure 'fig-19-1' 'pdf-no-bottom-border' %}
 
 Mecklenburg demonstrated the power of his model by predicting the response of a painting to wide swings in RH; his plot of tension in a sample from a 1912 painting is shown in [figure 19.2](#fig-19-2) (solid black line). Within a few years, various authors had repeated this measurement, including another sample from Mecklenburg’s 1912 painting, measured by Hedley while at CCI (solid green line). Although different authors used different materials and different procedures, the result was a universal “hockey stick” curve, with a minimum somewhere between 65% RH and 95% RH, depending on prior history and the amount of prestrain.
 
