--- a/content/8-posters/50.md
+++ b/content/8-posters/50.md
@@ -44,7 +44,7 @@ Morita and Kuroe said that it was difficult to get gum elemi at that time in Jap
 
 Based on the recipes shown in [figure 50.1](#fig-50-1), six formulas of the lining adhesives were prepared for the experiments. As the test pieces, 10 cm square pieces of linen canvas faced with Japanese Tengujo paper on one side were prepared. They were impregnated with the recipes shown in [table 50.1](#table-50-1) from the fabric side and labeled A through F. On the reverse (uncovered) side, a 1 ml drop of mineral spirit was applied. The drop was covered with blotting paper, and a glass plate and weight were placed on top for thirty seconds. This operation was repeated fifteen times for each piece. After the solvent evaporated completely, the weight loss was measured and the removal amount and rate (percentage) of each sample were compared.
 
-{% figure 'table-50-1' %}
+{% figure 'table-50-1' 'pdf-float-top' %}
 
 Ten test pieces were prepared for each adhesive (A–F), and half of them were subjected to artificial aging. The heat aging was carried out in an Espec LHU-113 Benchtop Temperature/Humidity Chamber at 55°C and 45% RH for three months. This aging condition was used by Gustav Berger in 1972 to test adhesives used in the consolidation of paintings. According to the reference, the heat aging at 55°C could keep the objects below the melting point (and possible critical deterioration point) of resins ({% cite 'Berger 1972b' %}). The mean value of the removal rate for each recipe was calculated as follows:
 
@@ -68,7 +68,7 @@ For the next step, what was left on the test pieces after removal was investigat
 
 {% figure 'fig-50-3' %}
 
-{% figure 'fig-50-4' 'pdf-two-column' %}
+{% figure 'fig-50-4' 'pdf-two-column pdf-float-top' %}
 
 As the spectrum of wax resin A before aging shows, its peak intensity became weaker at about 1735 c<sup>−1</sup> and a little stronger at about 1710 c<sup>−1</sup> by the removal. This implies that the spectrum gradually grows more similar to that of a resin than to that of beeswax. These changes of spectra were common in almost all the mixtures (A–E). These results suggest that beeswax tends to be removed better than resins. The spectra after aging showed changes by the removal similar to those observed before aging.
 
