--- a/content/8-posters/63.md
+++ b/content/8-posters/63.md
@@ -86,7 +86,7 @@ The target work was an acrylic painting by Masayoshi Nameki. The canvas had alre
 
     {% figure 'fig-63-6' %}
 
-    {% figure 'table-63-1' 'is-table-scale-5' %}
+    {% figure 'table-63-1' 'is-table-scale-5 pdf-float-top' %}
 
 7.  Canvas shrinkage was recorded directly after each application of water, after the desalination process was totally finished, and the following day, when the canvas had dried ([fig. 63.7](#fig-63-7)).
 
@@ -98,9 +98,9 @@ The target work was an acrylic painting by Masayoshi Nameki. The canvas had alre
 
 The blotting method can be used to remove residual salt from acrylic paintings painted thinly on cotton-fiber canvases. The shrinkage rate of the canvas can be kept to within 0.5% of the total surface by maintaining the painting under tension during the treatment ([tables 63.2](#table-63-2), [63.3](#table-63-3)).
 
-{% figure 'table-63-2' 'is-table-scale-6' %}
+{% figure 'table-63-2' 'is-table-scale-6 pdf-float-top' %}
 
-{% figure 'table-63-3' 'is-table-scale-6' %}
+{% figure 'table-63-3' 'is-table-scale-6 pdf-float-top' %}
 
 Researchers outside of Japan have been aware of the dangers of using excess moisture when cleaning paintings since the 1980s. In particular, there has been considerable debate about problems involving acrylic paints (a relatively new painting material), such as the swelling of resins due to the impact of various additives ( {% cite 'Jablonski et al. 2003' %}; {% cite 'Tumosa and Mecklenburg 2004' %}; {% cite 'Ormsby and Learner 2009' %}; {% cite 'Doménech-Carbó et al. 2013' %}; {% cite 'Toriumi 2018' %}; {% cite 'Hackney 2020' %}). Additive agents in acrylic paints tend to rise to the surface of paints, so these paintings probably lost these additives as a result of the tsunami. Furthermore, a water-based treatment was also used during the desalination process. In light of these factors, going forward we will need to ascertain the damage to the paints by carrying out experiments while preparing specimens.
 
