Edits to figures and text for paper 2

--- a/content/1-history/2.md
+++ b/content/1-history/2.md
@@ -47,7 +47,7 @@ A relaxation test is another useful experiment for studying time-dependent mater
 
 {% figure 'fig-2-3' %}
 
-The stress-relaxation test method outlined in [figure 2.4](#fig-2-4)) is the approach used in the CCI Lining Project to investigate the effects of different lining treatments for paintings on canvas ({% cite 'Michalski and Daly Hartin 1996' %}). From recent work, [figure 2.4](#fig-2-4)) shows a plot of tension (kN/m) versus time after a fixed strain was applied to each sample ({% cite 'Daly Hartin et al. 2011' %}). The initial sharp spike is caused by the rapid initial strain (see [figs. 2.3b, 2.3c](#fig-2-3)), which is followed by a quick decay in tension due to stress relaxation. The model painting with a linen lining shows no difference from the model painting (unlined) over the measurement time scale. The sailcloth lining causes a uniform vertical shift in tension due to the stiffness of the fabric, which is constant over the sixty-hour period. An advantage of the sailcloth lining is that its stiffness allows for a stable increase in tension, with less strain imposed on the painting. In fact, the strain could be reduced to roughly half and still maintain a similar tension to the model painting in the experimental time scale. The wax resin lining also shows a strong vertical shift due to the wax stiffness; however, it also exhibits relaxation characteristics.
+The stress-relaxation test method outlined in [figure 2.4](#fig-2-4) is the approach used in the CCI Lining Project to investigate the effects of different lining treatments for paintings on canvas ({% cite 'Michalski and Daly Hartin 1996' %}). From recent work, [figure 2.4](#fig-2-4) shows a plot of tension (kN/m) versus time after a fixed strain was applied to each sample ({% cite 'Daly Hartin et al. 2011' %}). The initial sharp spike is caused by the rapid initial strain (see [figs. 2.3b, 2.3c](#fig-2-3)), which is followed by a quick decay in tension due to stress relaxation. The model painting with a linen lining shows no difference from the model painting (unlined) over the measurement time scale. The sailcloth lining causes a uniform vertical shift in tension due to the stiffness of the fabric, which is constant over the sixty-hour period. An advantage of the sailcloth lining is that its stiffness allows for a stable increase in tension, with less strain imposed on the painting. In fact, the strain could be reduced to roughly half and still maintain a similar tension to the model painting in the experimental time scale. The wax-resin lining also shows a strong vertical shift due to the wax stiffness; however, it also exhibits relaxation characteristics.
 
 {% figure 'fig-2-4' %}
 
