Edits to paper 4

--- a/content/1-history/4.md
+++ b/content/1-history/4.md
@@ -75,13 +75,13 @@ Many of the paintings selected for assessment by the expert panel were paintings
 
 {% figure 'fig-4-4' %}
 
-An early example of the typical NMM method of wax-resin lining can be seen in the treatment of Matteo Perez d'Aleccio’s *The Siege of Malta: Siege and Bombardment of St Michael, 28 June 1565,* 1656 (BHC0255). The painting was relined in 1967, and the treatment was deemed successful at the time. However, in 1989 the canvas was found to be sagging near the bottom edge, which necessitated removal from the stretcher and restretching. The painting was of a reasonably large size (137.2 x 193 cm) and was exhibited in the time between the two treatments in a fluctuating environment, so these issues were not felt to be particularly surprising.
+An early example of the typical NMM method of wax-resin lining can be seen in the treatment of Matteo Perez d'Aleccio’s *The Siege of Malta: Siege and Bombardment of St Michael, 28 June 1565,* 1656 (BHC0255). The painting was relined in 1967, and the treatment was deemed successful at the time. However, in 1989 the canvas was found to be sagging near the bottom edge, which necessitated removal from the stretcher and restretching. The painting was of a reasonably large size (137.2 × 193 cm) and was exhibited in the time between the two treatments in a fluctuating environment, so these issues were not felt to be particularly surprising.
 
-Due to failure of the previous lining along the top edge, de Loutherbourg’s *Defeat of the Spanish Armada, 8 August 1588* (BHC0264) was relined in 1973. The work was included in the exhibition accompanying the 1974 conference as an example of a contemporary lining ([fig. 4.5](#fig-4-5)). A wax-resin relining followed the standard NMM litho paper prestretching ({% cite 'Chittenden, Lewis, and Percival-Prescott 2003' %}). However, complications occurred in the process. Records indicate that the large size of the painting (214.6 x 278.1 cm) necessitated relining on the hot table in two parts. After some technical difficulties in heating the table to the necessary temperature, it was found that the lined half displayed cockling due to differential thermal expansion. The expert panel cited cockling as a common phenomenon when paintings were lined in sections and said that this could often be magnified over a large scale. Despite the documented difficulties, our experts agreed that the lining appeared to be performing well, and in the long term these issues did not appear to have a detrimental effect.
+Due to failure of the previous lining along the top edge, de Loutherbourg’s *Defeat of the Spanish Armada, 8 August 1588* (BHC0264) was relined in 1973. The work was included in the exhibition accompanying the 1974 conference as an example of a contemporary lining ([fig. 4.5](#fig-4-5)). A wax-resin relining followed the standard NMM litho paper prestretching ({% cite 'Chittenden, Lewis, and Percival-Prescott 2003' %}). However, complications arose in the process. Records indicate that the large size of the painting (214.6 x 278.1 cm) necessitated relining on the hot table in two parts. After some technical difficulties in heating the table to the necessary temperature, it was found that the lined half displayed cockling due to differential thermal expansion. The expert panel cited cockling as a common phenomenon when paintings were lined in sections and explained that this could often be magnified over a large scale. Despite the documented difficulties, our experts agreed that the lining appeared to be performing well, and in the long term these issues did not appear to have a detrimental effect.
 
 {% figure 'fig-4-5' %}
 
-Throughout the study, several examples of experimental lining fabrics were examined. Rowland Johan Robb Langmaid’s *HMS* Dido, Ajax *and* Orion *in Action Off Crete, 21 May 1941,* (BHC0678) was lined in 1973 using Beva and a black polypropylene fabric ([fig. 4.6](#fig-4-6)). Although well adhered, the lining textile is now displaying signs of embrittlement and degradation, with splitting on the turnover edges. Another unusual choice was the wax-resin double lining on cotton duck with a Melinex film stuck to the reverse, which was used in the 1974 relining of Dominic Serres’s *Destruction of the American Fleet at Penobscot Bay, 14 August 1779*, late eighteenth century (BHC0425). Robert Luny’s *The East Indiaman* York *and Other Vessels,* 1788 (BHC3735) was lined in 1974 onto “post office bagging,” a fairly coarse linen that had been collected as a sample during the research travels prior to the conference.[^10]
+Throughout the study, several examples of experimental lining fabrics were examined. Rowland John Robb Langmaid’s *HMS* Dido, Ajax *and* Orion *in Action Off Crete, 21 May 1941* (BHC0678) was lined in 1973 using Beva 371 and a black polypropylene fabric ([fig. 4.6](#fig-4-6)). Although well adhered, the lining textile is now displaying signs of embrittlement and degradation, with splitting on the turnover edges. Another unusual choice was the wax-resin double lining on cotton duck with a Melinex film stuck to the reverse, which was used in the 1974 relining of Dominic Serres’s *Destruction of the American Fleet at Penobscot Bay, 14 August 1779*, late eighteenth century (BHC0425). Robert Luny’s *The East Indiaman* York *and Other Vessels,* 1788 (BHC3735), was lined in 1974 onto “post office bagging,” a fairly coarse linen that had been collected as a sample during the research travels prior to the conference.[^10]
 
 {% figure 'fig-4-6' %}
 
@@ -99,11 +99,11 @@ From the 1950s, the department was involved in lining research ({% cite 'Straub 
 
 Two strands emerge in the Courtauld reports: the paintings from the Courtauld Gallery collection and the paintings from external collections. Out of the 1,023 reports consulted from 1968 to 1996, 124 included structural treatment of some description (approximately 12%). Only eighteen reports from before 1980 were found, so the pre-1980 areas on the graphs shown in figures here should be interpreted with caution due to the unknown quantity of missing reports. Pre-1980 practices were gathered through interviews with conservators studying or working at the Courtauld during this period.
 
-The vacuum-envelope table developed by Hedley, Hackney, and Cummings was used from the 1970s until the early 1980s ({% cite 'Hedley, Hackney, and Cummings 2003' '83' %}). In 1984, a commercially built lining table, based on the design created in the department in the 1950s, came in as a long-term loan; this was used until 1994. Subsequently a multipurpose suction table with air-flow capability and a conventional hot-plate top was acquired from Willard Conservation Ltd.[^15] Occasionally, hand linings were also undertaken.
+The vacuum-envelope table developed by Hedley, Hackney, and Cummings was used from the 1970s until the early 1980s ({% cite 'Hedley, Hackney, and Cummings 2003' '83' %}). In 1984, a commercially built lining table, based on the design created in the department in the 1950s, came in as a long-term loan; this was used until 1994. Subsequently a multipurpose suction table with air-flow capability and a conventional hot-plate top was acquired from Willard Conservation Ltd.[^15] Occasionally, hand linings were also undertaken.[^16]
 
 ### Trends and Patterns: Adhesives and Fabrics
 
-CIA has a long history of using wax-resin. Waxes used were beeswax, bleached beeswax, or microcrystalline wax, combined with natural dammar or synthetic resins such as Ketone N or AW2. These mixtures were used exclusively for lining until the early 1970s, when Beva 371 and polymer dispersion adhesives were introduced. The very last wax-resin lining was performed in 1990 ([fig. 4.7](#fig-4-7)).[^16]
+CIA has a long history of using wax-resin. Waxes used were beeswax, bleached beeswax, or microcrystalline wax, combined with natural dammar or synthetic resins such as Ketone N or AW2. These mixtures were used exclusively for lining until the early 1970s, when Beva 371 and polymer dispersion adhesives were introduced. The very last wax-resin lining was performed in 1990 ([fig. 4.7](#fig-4-7)).
 
 {% figure 'fig-4-7' %}
 
@@ -125,7 +125,7 @@ In terms of loose-lining fabrics, there is more variety than at NMM. While polye
 
 Reviewing the Courtauld paintings with the expert panel, it was striking to see the widespread and enthusiastic adoption of modern lining fabrics and adhesives for the treatment of these works. The documentation of treatments, written in the context of a research and teaching institution, often gives a full insight into the decision-making processes and selection of materials.
 
-As already mentioned, very few paper records remain for the earliest treatments. For example, the 1969 marouflage of Lucien Pissarro’s *Le Brusq*, 1923 (P.1932.SC.322) onto aluminum was recorded only by the materials and date inscribed on the rigid support: “April 1969, 90% beeswax, 10% AW2 resin.” Similarly, the wax-resin lining of a fire-damaged painting attributed to Giovanni Francesco Barbieri, or Guercino,[^19] in 1976 is only recorded in a treatment database.[^20] This lining appears to have been carried out using cotton duck in a manner similar to that of the near-contemporaneous lining of the Serres *Penobscot Bay* painting at the NMM.
+As already mentioned, very few paper records remain for the earliest treatments. For example, the 1969 marouflage of Lucien Pissarro’s *Le Brusq*, 1923 (P.1932.SC.322), onto aluminum was recorded only by the materials and date inscribed on the rigid support: “April 1969, 90% beeswax, 10% AW2 resin.” Similarly, the wax-resin lining of a fire-damaged painting attributed to Giovanni Francesco Barbieri, or Guercino,[^19] in 1976 is only recorded in a treatment database.[^20] This lining appears to have been carried out using cotton duck in a manner similar to that of the near-contemporaneous lining of the Serres *Penobscot Bay* painting at the NMM.
 
 While the marouflage appeared to be an extreme intervention, our expert panel remarked that this had been a popular “preventative” measure in the 1960s. Chief among the problems associated with marouflage was weave emphasis resulting from the unyielding nature of the secondary support, an unfortunate outcome in the treatment of the Pissarro. The painting appears structurally sound with no apparent justification for the marouflage. The work seemed to be an example of lining for preventative measures.
 
